<resources>
    <string name="app_name">Ps5 Emulator Prank</string>

    <!-- onBoarding -->

    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="onBoarding_title1">LIGHTNING SPEED</string>
    <string name="onBoarding_title2">BREATHE-TAKING IMMERSION</string>
    <string name="onBoarding_title3">STUNNING GAME</string>
    <string name="onBoarding_title4">Your journey begins here.</string>
    <string name="onBoarding_subtitle1">Experience lightning-fast</string>
    <string name="onBoarding_subtitle2">ultra-high speed UFS 2.2</string>
    <string name="onBoarding_subtitle3">adaptive triggers and 3D Audio</string>
    <string name="onBoarding_subtitle4">Experience lightning-fast loading with an
                        ultra-high speed UFS 2.2, deeper immersion with
                        support for haptic feedback, adaptive
                        triggers and 3D Audio and an all-new
                        generation of incredible games.</string>
    <string name="privacy_policy">"By using this app, I agree to it's Privacy policy"</string>
    <string name="lets_start">Let\'s Start</string>

    <!-- Splash Screen -->

    <string name="splashTitle">PLAY HAS NO LIMITS</string>
    <string name="splashTitle2">Ps5 Prank Emulator</string>

    <!-- MainActivity -->

    <string name="todo">TODO</string>
    <string name="button">Button</string>
    <string name="play_games">Play Games</string>
    <string name="upload_data">Upload Data</string>
    <string name="upcoming_games">Upcoming Games</string>
    <string name="games_list">Games List</string>
    <string name="aaa_titles">Top Titles</string>
    <string name="games_images">Games Images</string>
    <string name="title_activity_play_games">PlayGamesActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="platform_names">Ps5 Ps4 Pc Nintendo</string>
    <string name="release_date">22 April 2025</string>
    <string name="game_name">God of war 3</string>
    <string name="psp">PSP</string>
    <string name="nitendo">Nitendo</string>
    <string name="xbox_360">Xbox 360</string>
    <string name="ps_vita">Ps Vita</string>
    <string name="xbox_x">Xbox X</string>
    <string name="xbox_one">Xbox One</string>
    <string name="pc">Pc</string>
    <string name="ps3">Ps3</string>
    <string name="ps4">Ps4</string>
    <string name="ps5">Ps5</string>
    <string name="enter_game_release_date">Enter Game Release Date</string>
    <string name="enter_game_url_info">Enter Game Url info</string>
    <string name="enter_game_image_url">Enter Game Image Url</string>
    <string name="enter_game_name">Enter Game Name</string>
    <string name="upload">upload</string>">


</resources>