<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="horizontal"
    tools:context=".Activities.UploadActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/lavender_border"
                android:orientation="vertical"
                android:padding="20dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_data"
                    android:textAlignment="center"
                    android:textColor="@color/lavender"
                    android:textSize="30sp" />

                <ImageView
                    android:id="@+id/upload_image"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/baseline_cloud_upload_24" />

                <EditText
                    android:id="@+id/upload_game_name"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:autofillHints=""
                    android:background="@drawable/lavender_border"
                    android:gravity="start|center_vertical"
                    android:hint="@string/enter_game_name"
                    android:padding="16dp"
                    android:textColor="@color/lavender"
                    tools:ignore="TextFields" />

                <EditText
                    android:id="@+id/upload_gameImage_url"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:autofillHints=""
                    android:background="@drawable/lavender_border"
                    android:gravity="start|center_vertical"
                    android:hint="@string/enter_game_url_info"
                    android:padding="16dp"
                    android:textColor="@color/lavender" />

                <EditText
                    android:id="@+id/upload_game_url"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/lavender_border"
                    android:gravity="start|center_vertical"
                    android:hint="@string/enter_game_image_url"
                    android:padding="16dp"
                    android:textColor="@color/lavender" />

                <EditText
                    android:id="@+id/upload_game_release"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:autofillHints=""
                    android:background="@drawable/lavender_border"
                    android:gravity="start|center_vertical"
                    android:hint="@string/enter_game_release_date"
                    android:padding="16dp"
                    android:textColor="@color/lavender" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:background="@drawable/lavender_border"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="start">

                        <CheckBox
                            android:id="@+id/checkbox_ps5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="1dp"
                            android:text="@string/ps5"
                            android:textColor="@color/lavender" />

                        <CheckBox
                            android:id="@+id/checkbox_ps4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="1dp"
                            android:text="@string/ps4"
                            android:textColor="@color/lavender" />

                        <CheckBox
                            android:id="@+id/checkbox_ps3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="1dp"
                            android:text="@string/ps3"
                            android:textColor="@color/lavender" />

                        <CheckBox
                            android:id="@+id/checkbox_pc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="1dp"
                            android:text="@string/pc"
                            android:textColor="@color/lavender" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <CheckBox
                            android:id="@+id/checkbox_xbox_one"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="1dp"
                            android:text="@string/xbox_one"
                            android:textColor="@color/lavender" />

                        <CheckBox
                            android:id="@+id/checkbox_xbox_x"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="1dp"
                            android:text="@string/xbox_x"
                            android:textColor="@color/lavender" />

                        <CheckBox
                            android:id="@+id/checkbox_ps_vita"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="1dp"
                            android:text="@string/ps_vita"
                            android:textColor="@color/lavender" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <CheckBox
                            android:id="@+id/checkbox_xbox360"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="1dp"
                            android:text="@string/xbox_360"
                            android:textColor="@color/lavender" />

                        <CheckBox
                            android:id="@+id/checkbox_nitendo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="1dp"
                            android:text="@string/nitendo"
                            android:textColor="@color/lavender" />

                        <CheckBox
                            android:id="@+id/checkbox_psp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="1dp"
                            android:text="@string/psp"
                            android:textColor="@color/lavender" />

                    </LinearLayout>


                </LinearLayout>

                <Button
                    android:id="@+id/upload_button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="50dp"
                    android:text="@string/upload" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </ScrollView>



</RelativeLayout>