<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/backgroud_main">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/rv_upg_game_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_linear_itemList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rv_upg_game_image"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/rv_upg_game_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:text="@string/game_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rv_upg_game_platform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/platform_names" />

        <TextView
            android:id="@+id/rv_upg_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_date" />


    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/rv_upg_game_info"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="24dp"
        android:src="@drawable/baseline_info_outline_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/layout_linear_itemList"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>